# daemon-lord-engine

./: .gitignore  README.md  build.sh
.nvim/: dap.lua
engine/: .clangd  CMakeLists.txt
engine/src/: assertions.h  defines.h  engine_types.h  entry.h  errors.h
engine/src/core/: application.cpp  application.h  logger.h  window.cpp  window.h
engine/src/platform/: input_types.h  platform.h  platform_linux.cpp  window.h  window_linux.cpp
engine/src/renderer/: renderer.h
engine/src/subsystems/: events.cpp  events.h  input.cpp  input.h
testbed/: .clangd  CMakeLists.txt  build.sh
testbed/src/: main.cpp
